--- a/openssl.cnf
+++ b/openssl.cnf
@@ -16,3 +16,8 @@ CN = localhost
 subjectKeyIdentifier = hash
 authorityKeyIdentifier = keyid:always,issuer:always
 basicConstraints = CA:true
+
+[alt_names]
+DNS.1 = localhost
+IP.1 = 127.0.0.1
+IP.2 = ::1
